Added Font Awesome

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
+    <script src="https://kit.fontawesome.com/e0f8847c22.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <div class="content app-text">
@@ -29,6 +30,12 @@
                 GENERATE REPORT
             </button>
         </div>
+    </div>
+
+    <div class="social">
+        <i class="fa-brands fa-facebook-f"></i>
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-brands fa-tiktok"></i>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
